--- a/src/.env
+++ b/src/.env
@@ -5,9 +5,9 @@
 # The IP below should be swapped to your real IP or DNS name, like 192.168.88.248, etc. if testing from remote browsers or mobile devices
 
 # Use this values to run the app locally in Windows
-ESHOP_EXTERNAL_DNS_NAME_OR_IP=host.docker.internal
-ESHOP_STORAGE_CATALOG_URL=http://host.docker.internal:5202/c/api/v1/catalog/items/[0]/pic/
-ESHOP_STORAGE_MARKETING_URL=http://host.docker.internal:5110/api/v1/campaigns/[0]/pic/
+#ESHOP_EXTERNAL_DNS_NAME_OR_IP=host.docker.internal
+#ESHOP_STORAGE_CATALOG_URL=http://host.docker.internal:5202/c/api/v1/catalog/items/[0]/pic/
+#ESHOP_STORAGE_MARKETING_URL=http://host.docker.internal:5110/api/v1/campaigns/[0]/pic/
 
 # Use this values to run the app locally in Mac
 # ESHOP_EXTERNAL_DNS_NAME_OR_IP=docker.for.mac.localhost
@@ -15,15 +15,15 @@ ESHOP_STORAGE_MARKETING_URL=http://host.docker.internal:5110/api/v1/campaigns/[0
 # ESHOP_STORAGE_MARKETING_URL=http://docker.for.mac.localhost:5110/api/v1/campaigns/[0]/pic/
 
 # Use this values to run the app locally in Linux
-# ESHOP_EXTERNAL_DNS_NAME_OR_IP=docker.for.linux.localhost
-# ESHOP_STORAGE_CATALOG_URL=http://docker.for.linux.localhost:5202/c/api/v1/catalog/items/[0]/pic/
-# ESHOP_STORAGE_MARKETING_URL=http://docker.for.linux.localhost:5110/api/v1/campaigns/[0]/pic/
+ESHOP_EXTERNAL_DNS_NAME_OR_IP=localhost
+ESHOP_STORAGE_CATALOG_URL=http://docker.for.linux.localhost:5202/c/api/v1/catalog/items/[0]/pic/
+ESHOP_STORAGE_MARKETING_URL=http://docker.for.linux.localhost:5110/api/v1/campaigns/[0]/pic/
 
 # Configure this values to the cloud storage locations
 # ESHOP_STORAGE_CATALOG_URL=<YourAzureStorage_Catalog_BLOB_URL>
 # ESHOP_STORAGE_MARKETING_URL=<YourAzureStorage_Marketing__BLOB_URL>
 
-ESHOP_PROD_EXTERNAL_DNS_NAME_OR_IP=10.121.122.162
+ESHOP_PROD_EXTERNAL_DNS_NAME_OR_IP=localhost
 
 #ESHOP_AZURE_REDIS_BASKET_DB=<YourAzureRedisBasketInfo>
 #ESHOP_AZURE_SERVICE_BUS=<YourAzureServiceBusInfo>
