Catalog-api debug/test enhancements

--- a/src/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -1,5 +1,9 @@
 {
+  "ConnectionString": "Server=localhost,5433;Database=Microsoft.eShopOnContainers.Services.CatalogDb;User Id=sa;Password=Pass@word",  
   "PicBaseUrl": "http://localhost:5101/api/v1/catalog/items/[0]/pic/",
+  "EventBusConnection":"localhost",
+  "EventBusUserName":"admin",
+  "EventBusPassword":"Pass@word",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
@@ -9,6 +13,5 @@
         "System": "Warning"
       }
     }
-  },
-  "EventBusConnection": "localhost"
+  }
 }
