--- a/.github/workflows/docker-ci.catalog-api.yml
+++ b/.github/workflows/docker-ci.catalog-api.yml
@@ -19,5 +19,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build and Test Docker images
       run: |
-        docker-compose -f src/docker-compose.catalog-api.yml up -d
+        docker-compose -f src/docker-compose.catalog-api.yml up --exit-code-from test-server 
         docker ps
