--- a/src/docker-compose.catalog-api.yml
+++ b/src/docker-compose.catalog-api.yml
@@ -1,12 +1,12 @@
-#  docker-compose -f "docker-compose.catalog-api.yml" up --env-file ./config/.env.dev -d
+# docker-compose -f "docker-compose.catalog-api.yml" up --env-file /.env.dev -d
 version: '3.4'
 
 services:
   sqldata:
     image: mcr.microsoft.com/mssql/server:2017-latest 
     environment:
-      - SA_PASSWORD=$ESHOP_SQL_SERVER_SA_USER
-      - ACCEPT_EULA=$ESHOP_SQL_SERVER_SA_PASSWORD
+      - SA_PASSWORD=${ESHOP_SQL_SERVER_SA_USER}
+      - ACCEPT_EULA=${ESHOP_SQL_SERVER_SA_PASSWORD}
     ports:
       - "5433:1433"
     volumes:
@@ -16,8 +16,8 @@ services:
     image: rabbitmq:3-management-alpine
     container_name: rabbitmq
     environment:
-      RABBITMQ_DEFAULT_USER: ${ESHOP_SERVICE_BUS_USERNAME}
-      RABBITMQ_DEFAULT_PASS: ${ESHOP_SERVICE_BUS_PASSWORD}
+      - RABBITMQ_DEFAULT_USER=${ESHOP_SERVICE_BUS_USERNAME}
+      - RABBITMQ_DEFAULT_PASS=${ESHOP_SERVICE_BUS_PASSWORD}
     ports:
       - "15672:15672"
       - "5672:5672"
