--- a/src/dev.env
+++ b/src/dev.env
@@ -21,10 +21,10 @@ ESHOP_STORAGE_MARKETING_URL=http://docker.for.linux.localhost:5110/api/v1/campai
 ESHOP_PROD_EXTERNAL_DNS_NAME_OR_IP=localhost
 
 ESHOP_PROD_EXTERNAL_DNS_NAME_OR_IP=localhost
+ESHOP_SQL_SERVER_USERNAME=sa
+ESHOP_SQL_SERVER_SA_PASSWORD=Password.123
 ESHOP_SERVICE_BUS_USERNAME=admin
-ESHOP_SERVICE_BUS_PASSWORD=Pass@word
-ESHOP_SQL_SERVER_SA_USER=sa
-ESHOP_SQL_SERVER_SA_PASSWORD=Pass@word
+ESHOP_SERVICE_BUS_PASSWORD=Password.123
 
 # Configure this values to the cloud storage locations
 # ESHOP_STORAGE_CATALOG_URL=<YourAzureStorage_Catalog_BLOB_URL>
