--- a/src/docker-compose.catalog-api.yml
+++ b/src/docker-compose.catalog-api.yml
@@ -67,31 +67,35 @@ services:
   ##    - sqldata
   ##    - catalog-api
   
-  unit-tests:
-    network_mode: bridge
-    build:
-      context: . #src
-      dockerfile: Services/Catalog/Catalog.FunctionalTests/Dockerfile
-    environment:
-      - ConnectionString=Server=sqldata,1433;Database=Microsoft.eShopOnContainers.Services.CatalogDb;User Id=${ESHOP_SQL_SERVER_USERNAME};Password=${ESHOP_SQL_SERVER_SA_PASSWORD}
-      - PicBaseUrl=${ESHOP_STORAGE_CATALOG_URL}
-      - EventBusConnection=rabbitmq
-      - EventBusUserName=${ESHOP_SERVICE_BUS_USERNAME}
-      - EventBusPassword=${ESHOP_SERVICE_BUS_PASSWORD}
-      - AzureStorageAccountName=${ESHOP_AZURE_STORAGE_CATALOG_NAME}
-      - AzureStorageAccountKey=${ESHOP_AZURE_STORAGE_CATALOG_KEY}
-      - UseCustomizationData=True
-      - AzureServiceBusEnabled=False
-      - AzureStorageEnabled=False
-      - ApplicationInsights__InstrumentationKey=${INSTRUMENTATION_KEY}
-      - OrchestratorType=${ORCHESTRATOR_TYPE}
-      - GRPC_PORT=81
-      - PORT=80
-      - PATH_BASE=/catalog-api
-    command: >
-      /bin/sh -c "
-      dotnet test "/src/Services/Catalog/Catalog.UnitTests" /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura;
-      sleep infinity"
+  #unit-tests:
+  #  network_mode: bridge
+  #  build:
+  #    context: . #src
+  #    dockerfile: Services/Catalog/Catalog.FunctionalTests/Dockerfile
+  #  environment:
+  #    - ConnectionString=Server=sqldata,1433;Database=Microsoft.eShopOnContainers.Services.CatalogDb;User Id=${ESHOP_SQL_SERVER_USERNAME};Password=${ESHOP_SQL_SERVER_SA_PASSWORD}
+  #    - PicBaseUrl=${ESHOP_STORAGE_CATALOG_URL}
+  #    - EventBusConnection=rabbitmq
+  #    - EventBusUserName=${ESHOP_SERVICE_BUS_USERNAME}
+  #    - EventBusPassword=${ESHOP_SERVICE_BUS_PASSWORD}
+  #    - AzureStorageAccountName=${ESHOP_AZURE_STORAGE_CATALOG_NAME}
+  #    - AzureStorageAccountKey=${ESHOP_AZURE_STORAGE_CATALOG_KEY}
+  #    - UseCustomizationData=True
+  #    - AzureServiceBusEnabled=False
+  #    - AzureStorageEnabled=False
+  #    - ApplicationInsights__InstrumentationKey=${INSTRUMENTATION_KEY}
+  #    - OrchestratorType=${ORCHESTRATOR_TYPE}
+  #    - GRPC_PORT=81
+  #    - PORT=80
+  #    - PATH_BASE=/catalog-api
+  #  command: >
+  #    /bin/sh -c "
+  #    cd /src/Services/Catalog/Catalog.UnitTests
+  #    ;dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
+  #    ;reportgenerator -reports:/src/Services/Catalog/Catalog.UnitTests/coverage.cobertura.xml \
+  #                     -targetdir:coveragereport \
+  #                     -reporttypes:Html
+  #    ;sleep infinity"
 
   test-server:
     network_mode: bridge
