--- a/src/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
-  "ConnectionString": "Server=localhost,5433;Database=Microsoft.eShopOnContainers.Services.CatalogDb;User Id=sa;Password=Pass@word",  
+  "ConnectionString": "Server=localhost,1433;Database=Microsoft.eShopOnContainers.Services.CatalogDb;User Id=sa;Password=Password.123",  
   "PicBaseUrl": "http://localhost:5101/api/v1/catalog/items/[0]/pic/",
   "EventBusConnection":"localhost",
   "EventBusUserName":"admin",
-  "EventBusPassword":"Pass@word",
+  "EventBusPassword":"Password.123",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
