--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,14 +14,36 @@
            }
        },
         {
-            "name": ".NET Core Launch (web)",
+            "name": ".NET Core Launch (Catalog)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
+            "preLaunchTask": "build (catalog)",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/src/Services/Catalog/Catalog.API/bin/Debug/netcoreapp3.1/Catalog.API.dll",
             "args": [],
             "cwd": "${workspaceFolder}/src/Services/Catalog/Catalog.API",
+            "stopAtEntry": false,
+            // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+        {
+            "name": ".NET Core Launch (Ordering)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build (ordering)",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/src/Services/Ordering/Ordering.API/bin/Debug/netcoreapp3.1/Ordering.API.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/src/Services/Ordering/Ordering.API",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
