--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "ConnectionString": "Server=tcp:127.0.0.1,5433;Database=Microsoft.eShopOnContainers.Services.OrderingDb;User Id=sa;Password=Pass@word;",
+  "ConnectionString": "Server=localhost,1433;Database=Microsoft.eShopOnContainers.Services.OrderingDb;User Id=sa;Password=Password.123",
   "IdentityUrl": "http://localhost:5105",
   "UseCustomizationData": false,
   "Serilog": {
@@ -22,7 +22,9 @@
     "InstrumentationKey": ""
   },
   "EventBusRetryCount": 5,
-  "EventBusConnection": "localhost",
+  "EventBusConnection":"localhost",
+  "EventBusUserName":"admin",
+  "EventBusPassword":"Password.123",
   "UseVault": false,
   "Vault": {
     "Name": "eshop",
