--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,9 +4,6 @@
 {
 	"name": "Docker from Docker Compose + Kubernetes & Helm",
 	"dockerFile": "Dockerfile",
-	//"dockerComposeFile": [
-	//	"docker-compose.yml"]
-	//,
 
 	//"service": "docker-from-docker",
 	"workspaceFolder": "/workspace",
@@ -50,7 +47,7 @@
 	"forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "kubectl version",
+	"postCreateCommand": "wget https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64 && chmod +x  minikube-linux-amd64 && sudo mv minikube-linux-amd64 /usr/local/bin/minikube && minikube version"
 
 	// Uncomment when using a ptrace-based debugger like C++, Go, and Rust.
 	// "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
